AR_RU_04 : Services : Made use of components and utility classes

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -86,7 +86,7 @@
     }
 
     @include desktop {
-        font-family: $font-size-lg;
+        font-size: $font-size-lg;
     }
 }
 .section-sub-heading {
