--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -3,13 +3,41 @@
 @use '../abstracts/utilities';
 
 .services {
+    &__blur {
+        position: absolute;
+        height: 40rem;
+        width: 40rem;
+        border-radius: 100%;
+        right: -50rem;
+        top: -20rem;
+        filter: blur(300px);
+    }
+    position: relative;
     padding-top: 7.5rem;
     text-align: center;
-    @include flex($flex-direction: column, $flex-wrap: nowrap, $gap: 3.2rem);
+    @include flex(
+        $flex-direction: column,
+        $flex-wrap: nowrap,
+        $gap: 3.2rem,
+        $justify-content: space-between
+    );
+
+    @include desktop {
+        flex-direction: row;
+        text-align: left;
+        padding-top: 2.5rem;
+        .services__card3 {
+            display: none;
+        }
+    }
     &__content {
         @include flex($flex-direction: column, $gap: 1.8rem);
+        @include desktop {
+            align-items: baseline;
+        }
     }
     &__card {
+        text-align: center;
         @extend .card;
         @include flex(
             $flex-direction: column,
@@ -27,6 +55,15 @@
             gap: 6.4rem;
             max-width: 28.8rem;
             max-height: 44.3rem;
+        }
+        @include desktop {
+            width: fit-content;
+            padding: 6.4rem;
+            gap: 6.4rem;
+            max-width: 38.6rem;
+            max-height: 44.3rem;
+        }
+        @include desktop {
         }
         .card__title {
             font-size: 2.4rem;
@@ -46,6 +83,11 @@
         @include flex($flex-direction: column, $gap: 1.6rem, $flex-wrap: wrap);
         @include tablet {
             flex-direction: row;
+        }
+        @include desktop {
+            width: fit-content;
+            flex-direction: row;
+            flex-wrap: nowrap;
         }
     }
 }
