--- a/src/styles/components/_container.scss
+++ b/src/styles/components/_container.scss
@@ -1,12 +1,10 @@
 @use '../abstracts/' as *;
 
 .container {
-    width: 100vw;
+    width: 100%;
 
-    @include mobile {
-        padding-left: 1.6rem;
-        padding-right: 1.6rem;
-    }
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
 
     @include tablet {
         padding-left: 6.4rem;
