AR_RU_03 : Hero : Made use of components and utilities classes

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -85,7 +85,7 @@
             opacity 0.3s ease;
 
         a {
-            font-size: $font-size-s;
+            font-size: $font-size-sm;
             color: inherit;
             transition: 0.5s;
             &:hover {
