--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -8,7 +8,7 @@ $font-weight-700: 700;
 $font-weight-900: 900;
 
 $font-size-xs: 1.4rem;
-$font-size-s: 1.6rem;
+$font-size-sm: 1.6rem;
 $font-size-md: 1.8rem;
 $font-size-xl: 4rem;
 $font-size-xxl: 5.6rem;
