AR_RU_04 : Services : Resolved coderabbitai issues

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -103,10 +103,10 @@
 
 .card {
     border-radius: 3.2rem;
-    border: 1px solid #1918251a;
+    border: $grey-border;
+    transition: 0.5s;
 }
 
 .card:hover {
     box-shadow: $box-shadow-hover-effect;
-    transition: 0.5s;
 }
