AR_RU_05 : Travel : Rebased changes and made use of components and utility classes

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -101,6 +101,16 @@
     }
 }
 
+.section-desc {
+    font-size: $font-size-sm;
+    @include tablet {
+        font-size: $font-size-md;
+    }
+    @include desktop {
+        font-size: $font-size-md;
+    }
+}
+
 .card {
     border-radius: 3.2rem;
     border: $grey-border;
