--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -1,31 +1,101 @@
 @use '../abstracts/mixins/' as *;
 @use '../abstracts/variables/' as *;
 
-.travel-right {
-    @include flex(center, center);
-    flex-direction: column;
-    gap: 3.2rem;
-}
-.travel__icon {
-    height: 10rem;
-    width: 12rem;
-    position: absolute;
-    bottom: 10rem;
-    left: 15rem;
-
-    display: none;
-}
-
-@include desktop {
-    .travel-right {
-        display: flex;
-        flex-direction: column;
-        gap: 6.4rem;
-        width: 40%;
-        height: 50%;
-        align-items: baseline;
+.travel {
+    width: 100%;
+    padding-top: 11rem;
+    @include flex($flex-direction: column, $gap: 3.2rem);
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+    @include tablet {
+        padding-top: 21rem;
+        padding-left: 6.4rem;
+        padding-right: 6.4rem;
     }
-    .travel__icon {
-        display: block;
+    @include desktop {
+        padding-top: 16rem;
+        flex-direction: row;
+        gap: 0;
+        flex-wrap: nowrap;
+        justify-content: start;
+        padding-right: 13.8rem;
+    }
+
+    &__content {
+        padding-top: 0.5rem;
+        text-align: center;
+        @include flex($flex-direction: column, $gap: 3.2rem);
+        @include desktop {
+            max-width: 45rem;
+            text-align: left;
+        }
+    }
+
+    &__headings-wrapper {
+        @include flex($flex-direction: column, $gap: 2rem);
+        @include desktop {
+            align-items: baseline;
+        }
+    }
+
+    &__cards-container {
+        position: relative;
+        width: 100%;
+        @include flex($gap: 1.6rem, $flex-direction: column);
+
+        @include tablet {
+            padding-top: 3rem;
+        }
+        .card {
+            white-space: nowrap;
+            @include flex(
+                $flex-direction: column,
+                $gap: 1.6rem,
+                $flex-wrap: nowrap
+            );
+            width: 100%;
+            padding: 3.2rem;
+            max-height: 15.1rem;
+
+            @include tablet {
+                max-width: 40rem;
+            }
+            @include desktop {
+                max-width: 20.9rem;
+            }
+            &__heading {
+                font-size: 3.5rem;
+            }
+            &__sub-heading {
+                font-size: 1.8rem;
+            }
+        }
+    }
+
+    &__cards-group1,
+    &__cards-group2 {
+        width: 100%;
+        @include flex($flex-direction: column, $gap: 1.6rem);
+        @include tablet {
+            flex-direction: row;
+        }
+        @include desktop {
+            flex-direction: row;
+        }
+    }
+
+    &__icon {
+        height: 10rem;
+        width: 10rem;
+        position: absolute;
+        top: -5rem;
+        right: -5rem;
+        display: none;
+        img {
+            object-fit: cover;
+        }
+        @include desktop {
+            display: block;
+        }
     }
 }
