AR_RU_05 : Travel : Rebased changes and made use of components and utility classes

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -100,3 +100,12 @@
         font-size: 4.4rem;
     }
 }
+.section-desc {
+    font-size: $font-size-sm;
+    @include tablet {
+        font-size: $font-size-md;
+    }
+    @include desktop {
+        font-size: $font-size-md;
+    }
+}
