AR_RU_05 : Travel : Fixed coderabbitai issues

--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -165,7 +165,9 @@
     &__img {
         max-height: 2rem;
         width: fit-content;
-        object-fit: contain;
+        img {
+            object-fit: contain;
+        }
     }
     @include tablet {
         margin: auto;
