--- a/src/styles/layout/_features.scss
+++ b/src/styles/layout/_features.scss
@@ -1,1 +1,59 @@
 @use '../abstracts/' as *;
+
+.features {
+    padding-top: 10rem;
+    @include flex($flex-direction: column, $gap: 10rem);
+    text-align: center;
+    padding-left: 1.6rem;
+    padding-right: 1.6rem;
+    &__headings-wrapper {
+        @include flex($flex-direction: column, $gap: 1.6rem);
+    }
+    &__img {
+        max-width: 35rem;
+        max-height: 43.8rem;
+    }
+    &__content {
+        @include flex($flex-direction: column, $gap: 3.2rem);
+    }
+
+    &__card-container {
+        padding-top: 2.7rem;
+        @include flex($flex-direction: column, $gap: 0.8rem);
+        width: 100%;
+    }
+
+    .card {
+        width: 100%;
+        max-height: 29rem;
+        @include flex(
+            $flex-direction: column,
+            $align-items: baseline,
+            $gap: 3.2rem
+        );
+        padding: 3.2rem;
+
+        &__text-wrapper {
+            @include flex(
+                $flex-direction: column,
+                $gap: 0.8rem,
+                $align-items: baseline
+            );
+
+            .card-heading {
+                font-size: 2.3rem;
+            }
+            .card-sub-heading {
+                font-size: 1.8rem;
+            }
+        }
+        &__icon-container {
+            font-size: 4.8rem;
+            color: $white;
+            width: 10rem;
+            height: 10rem;
+            border-radius: 3.2rem;
+            @include flex;
+        }
+    }
+}
