--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -5,19 +5,16 @@
     width: 100%;
     padding-top: 11rem;
     @include flex($flex-direction: column, $gap: 3.2rem);
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
+
     @include tablet {
         padding-top: 21rem;
-        padding-left: 6.4rem;
-        padding-right: 6.4rem;
     }
     @include desktop {
         padding-top: 16rem;
         flex-direction: row;
         gap: 0;
         flex-wrap: nowrap;
-        justify-content: start;
+        justify-content: space-between;
         padding-right: 13.8rem;
     }
 
