AR_RU_06 : Key Features : Used components and utility classes to redevelop features section

--- a/src/styles/layout/_features.scss
+++ b/src/styles/layout/_features.scss
@@ -4,23 +4,53 @@
     padding-top: 10rem;
     @include flex($flex-direction: column, $gap: 10rem);
     text-align: center;
-    padding-left: 1.6rem;
-    padding-right: 1.6rem;
+
+    @include tablet {
+        padding-top: 14rem;
+        gap: 7.2rem;
+    }
+    @include desktop {
+        flex-direction: row-reverse;
+        flex-wrap: nowrap;
+        padding-top: 20rem;
+        justify-content: space-between;
+    }
     &__headings-wrapper {
         @include flex($flex-direction: column, $gap: 1.6rem);
+        @include desktop {
+            align-items: baseline;
+        }
     }
+
     &__img {
         max-width: 35rem;
         max-height: 43.8rem;
+        @include tablet {
+            max-width: 69.3rem;
+            max-height: 86.9rem;
+        }
+        @include desktop {
+            max-width: 69.3rem;
+            max-height: 86.9rem;
+        }
     }
     &__content {
         @include flex($flex-direction: column, $gap: 3.2rem);
+
+        @include desktop {
+            max-width: 55.6rem;
+            align-items: baseline;
+            text-align: left;
+        }
     }
 
     &__card-container {
         padding-top: 2.7rem;
         @include flex($flex-direction: column, $gap: 0.8rem);
         width: 100%;
+        @include desktop {
+            gap: 1.6rem;
+        }
     }
 
     .card {
@@ -32,6 +62,15 @@
             $gap: 3.2rem
         );
         padding: 3.2rem;
+
+        @include tablet {
+            flex-direction: row;
+            justify-content: start;
+            align-items: center;
+        }
+        @include desktop {
+            max-height: 16.4rem;
+        }
 
         &__text-wrapper {
             @include flex(
