AR_RU_08 : Newsletter : Developed the newsletter section

--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -11,3 +11,5 @@ $shadow-color-3: #0000000d;
 $shadow-color-4: #00000003;
 $shadow-color-5: #00000000;
 $grey-border: 1px solid #eeeeee;
+$dark-grey: #191825bf;
+$custard-yellow: #facd4914;
