--- a/src/styles/layout/_newsletter.scss
+++ b/src/styles/layout/_newsletter.scss
@@ -57,7 +57,7 @@
         flex-wrap: nowrap;
         input {
             font-size: 1.4rem;
-            width: 80%;
+            width: 100%;
             height: 100%;
 
             @include tablet {
@@ -68,15 +68,21 @@
             }
         }
         @include tablet {
-            width: 65%;
+            flex-basis: 60%;
+            flex-shrink: 0;
+            flex-grow: 1;
         }
         @include desktop {
             width: 75%;
         }
     }
-    &__input:hover,
-    &__input:focus {
+
+    &__input:hover {
         box-shadow: $box-shadow-hover-effect;
+    }
+    &__input:focus-within {
+        box-shadow: $box-shadow-hover-effect;
+        border: $grey-border;
     }
     &__mail-icon {
         font-size: 2rem;
