AR_RU_03 : Hero : Made secondary buttons consistent

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -16,6 +16,7 @@
     &--secondary {
         background-color: $white;
         color: $midnight-express-50;
+        border: $grey-border;
     }
 }
 
