--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -3,6 +3,10 @@
 .circular-md {
     font-family: $circular-md;
 }
+
+.inter {
+    font-family: $inter;
+}
 .overflow-hidden {
     overflow: hidden;
 }
@@ -28,6 +32,10 @@
 
 .orange-text {
     color: $outrageous-orange;
+}
+
+.pink-text {
+    color: $french-rose;
 }
 
 .grey-text {
