--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -37,9 +37,9 @@ p {
 
 img,
 picture {
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
     display: block;
-    height: auto;
 }
 
 input,
