--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -7,5 +7,9 @@ $font-weight-400: 400;
 $font-weight-700: 700;
 $font-weight-900: 900;
 
-$font-size-md: 1.4rem;
+$font-size-xs: 1.4rem;
+$font-size-sm: 1.6rem;
+$font-size-md: 1.8rem;
 $font-size-xl: 4rem;
+$font-size-xxl: 5.6rem;
+$font-size-xxxl: 6.9rem;
