--- a/src/styles/abstracts/variables/_fonts.scss
+++ b/src/styles/abstracts/variables/_fonts.scss
@@ -11,6 +11,7 @@ $font-size-xs: 1.4rem;
 $font-size-sm: 1.6rem;
 $font-size-md: 1.8rem;
 $font-size-lg: 2.4rem;
+$font-size-lxl: 2.8rem;
 $font-size-xl: 4rem;
 $font-size-xxl: 5.6rem;
 $font-size-xxxl: 6.9rem;
