--- a/src/styles/layout/_services.scss
+++ b/src/styles/layout/_services.scss
@@ -4,7 +4,7 @@
 
 .services {
     position: relative;
-    padding-top: 7.5rem;
+    padding-top: 6rem;
     text-align: center;
     @include flex(
         $flex-direction: column,
@@ -13,12 +13,12 @@
         $justify-content: space-between
     );
     @include tablet {
-        padding-top: 1rem;
+        padding-top: 12.8rem;
     }
     @include desktop {
         flex-direction: row;
         text-align: left;
-        padding-top: 2.5rem;
+        padding-top: 14rem;
         justify-content: space-between;
         .services__card3 {
             display: none;
@@ -28,47 +28,31 @@
         @include flex($flex-direction: column, $gap: 1.8rem);
         @include desktop {
             align-items: baseline;
+            padding-top: 4rem;
+        }
+        @include desktop {
+            max-width: 40rem;
         }
     }
     &__card {
-        text-align: center;
-        line-height: normal;
-        @include flex(
-            $flex-direction: column,
-            $flex-wrap: nowrap,
-            $gap: 3.2rem
-        );
-        padding: 3.2rem;
-        width: 100%;
-        flex-basis: 100%;
-        align-self: stretch;
-
-        @include tablet {
-            width: fit-content;
-            padding: 6.4rem;
-            gap: 6.4rem;
-            max-width: 28.8rem;
-            max-height: 44.3rem;
-        }
-        @include desktop {
-            width: fit-content;
-            padding: 6.4rem;
-            gap: 6.4rem;
-            max-width: 38.6rem;
-            max-height: 44.3rem;
-        }
-
         .card__title {
-            font-size: 2.4rem;
+            font-size: $font-size-lg;
+            // width: 100%;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+            overflow: hidden;
+            line-clamp: 3;
             @include tablet {
-                font-size: 2.8rem;
+                font-size: $font-size-lxl;
             }
             @include desktop {
-                font-size: 2.8rem;
+                font-size: $font-size-lxl;
             }
         }
         .card__desc {
-            font-size: 1.8rem;
+            font-size: $font-size-md;
+            line-height: 2.6rem;
         }
 
         .card__content-wrapper {
