--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -45,7 +45,7 @@
     }
 
     &__content {
-        @include flex($flex-direction: column, $gap: 2rem);
+        @include flex($flex-direction: column, $gap: 1.6rem);
         padding: 0 1rem;
         text-align: center;
         line-height: normal;
@@ -56,10 +56,10 @@
         }
 
         @include desktop {
-            padding-top: 2rem;
+            padding-top: 0;
             text-align: left;
             align-items: baseline;
-            gap: 5rem;
+            gap: 5.2rem;
             max-width: 42rem;
         }
     }
@@ -68,10 +68,11 @@
         font-size: $font-size-xs;
         @include flex($gap: 0.5rem);
         i {
-            font-size: 2.4rem;
+            font-size: $font-size-lg;
         }
 
         @include desktop {
+            margin-top: 1.2rem;
             font-size: $font-size-sm;
         }
     }
@@ -87,7 +88,13 @@
         }
     }
     &__sub-heading {
+        padding-top: 1rem;
         font-size: $font-size-xs;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+        line-clamp: 4;
         @include tablet {
             padding: 0 6rem;
             font-size: $font-size-md;
@@ -102,7 +109,7 @@
     }
 }
 .actions {
-    padding-top: 2.5rem;
+    padding-top: 2.9rem;
     width: 100%;
     @include flex($flex-direction: column, $gap: 2.4rem, $flex-wrap: nowrap);
     white-space: nowrap;
@@ -134,9 +141,9 @@
         padding: 2.4rem 3.2rem;
         @include flex($gap: 0.5rem);
         i {
-            font-size: 2.4rem;
+            font-size: $font-size-lg;
             @include tablet {
-                font-size: 2rem;
+                font-size: $font-size-md;
             }
         }
         @include tablet {
@@ -150,7 +157,7 @@
     }
 }
 .co-partners {
-    padding-top: 6.5rem;
+    padding-top: 6.2rem;
     width: 100%;
     @include flex;
     flex-wrap: wrap;
