--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -2,7 +2,6 @@
 @use '../abstracts/variables/' as *;
 
 .travel {
-    width: 100%;
     padding-top: 11rem;
     @include flex($flex-direction: column, $gap: 3.2rem);
 
@@ -10,19 +9,19 @@
         padding-top: 21rem;
     }
     @include desktop {
-        padding-top: 16rem;
+        padding-top: 13rem;
         flex-direction: row;
         gap: 0;
         flex-wrap: nowrap;
         justify-content: space-between;
-        padding-right: 13.8rem;
     }
 
     &__content {
-        padding-top: 0.5rem;
+        padding-top: 20rem;
         text-align: center;
         @include flex($flex-direction: column, $gap: 3.2rem);
         @include desktop {
+            padding-top: 5rem;
             max-width: 45rem;
             text-align: left;
         }
@@ -39,32 +38,19 @@
         position: relative;
         width: 100%;
         @include flex($gap: 1.6rem, $flex-direction: column);
-
         @include tablet {
             padding-top: 3rem;
         }
+        @include desktop {
+            padding-top: 3rem;
+            gap: 3.2rem;
+        }
         .card {
-            white-space: nowrap;
-            @include flex(
-                $flex-direction: column,
-                $gap: 1.6rem,
-                $flex-wrap: nowrap
-            );
-            width: 100%;
-            padding: 3.2rem;
-            max-height: 15.1rem;
-
-            @include tablet {
-                max-width: 40rem;
-            }
-            @include desktop {
-                max-width: 20.9rem;
-            }
             &__heading {
                 font-size: 3.5rem;
             }
             &__sub-heading {
-                font-size: 1.8rem;
+                font-size: $font-size-md;
             }
         }
     }
@@ -82,11 +68,12 @@
     }
 
     &__icon {
-        height: 10rem;
-        width: 10rem;
+        height: 12rem;
+        width: 12rem;
         position: absolute;
         top: -5rem;
         right: -5rem;
+        z-index: 2;
         display: none;
         img {
             object-fit: cover;
