--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -166,6 +166,7 @@
         max-height: 2rem;
         width: fit-content;
         img {
+            height: 2rem;
             object-fit: contain;
         }
     }
@@ -173,12 +174,14 @@
         margin: auto;
         max-width: 70%;
         padding: 13.4rem 0 0 0;
-        @include flex;
-        flex-wrap: wrap;
-        gap: 3rem;
+        @include flex($flex-wrap: wrap);
+        gap: 3.5rem;
         &__img {
-            height: 3rem;
-            width: fit-content;
+            max-height: fit-content;
+            max-width: fit-content;
+            img {
+                height: 3rem;
+            }
         }
     }
     @include desktop {
@@ -189,14 +192,6 @@
         img {
             height: 3.2rem;
             width: fit-content;
-        }
-    }
-
-    .co-partners {
-        margin-top: 10rem;
-        gap: 8rem;
-        &__img {
-            height: 3.5rem;
         }
     }
 }
