AR_RU_05 : Travel : Made travel section pixel perfect

--- a/src/styles/abstracts/_utilities.scss
+++ b/src/styles/abstracts/_utilities.scss
@@ -101,6 +101,11 @@
     }
 }
 .section-desc {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
+    line-clamp: 5;
     font-size: $font-size-sm;
     @include tablet {
         font-size: $font-size-md;
