AR_RU_06 : Key Features : Made this section pixel perfect

--- a/src/styles/layout/_features.scss
+++ b/src/styles/layout/_features.scss
@@ -1,18 +1,18 @@
 @use '../abstracts/' as *;
 
 .features {
-    padding-top: 10rem;
+    padding-top: 12rem;
     @include flex($flex-direction: column, $gap: 10rem);
     text-align: center;
 
     @include tablet {
         padding-top: 14rem;
-        gap: 7.2rem;
+        gap: 6.4rem;
     }
     @include desktop {
         flex-direction: row-reverse;
         flex-wrap: nowrap;
-        padding-top: 20rem;
+        padding-top: 13.4rem;
         justify-content: space-between;
     }
     &__headings-wrapper {
@@ -35,6 +35,11 @@
         }
     }
     &__content {
+        .section-desc {
+            @include tablet {
+                padding: 0 5rem;
+            }
+        }
         @include flex($flex-direction: column, $gap: 3.2rem);
 
         @include desktop {
@@ -48,43 +53,27 @@
         padding-top: 2.7rem;
         @include flex($flex-direction: column, $gap: 0.8rem);
         width: 100%;
+        @include tablet {
+            padding-top: 3rem;
+        }
         @include desktop {
             gap: 1.6rem;
         }
     }
 
     .card {
-        width: 100%;
-        max-height: 29rem;
-        @include flex(
-            $flex-direction: column,
-            $align-items: baseline,
-            $gap: 3.2rem
-        );
-        padding: 3.2rem;
-
-        @include tablet {
-            flex-direction: row;
-            justify-content: start;
-            align-items: center;
-        }
-        @include desktop {
-            max-height: 16.4rem;
-        }
-
         &__text-wrapper {
             @include flex(
                 $flex-direction: column,
                 $gap: 0.8rem,
                 $align-items: baseline
             );
-
-            .card-heading {
-                font-size: 2.3rem;
-            }
-            .card-sub-heading {
-                font-size: 1.8rem;
-            }
+        }
+        &-heading {
+            font-size: $font-size-lg;
+        }
+        &-sub-heading {
+            font-size: $font-size-md;
         }
         &__icon-container {
             font-size: 4.8rem;
