--- a/src/styles/layout/_testimonial.scss
+++ b/src/styles/layout/_testimonial.scss
@@ -1,41 +1,50 @@
 @use '../abstracts/' as *;
 
 .testimonial {
-    padding-top: 14rem;
-    @include flex($flex-direction: column, $gap: 6.4rem);
-
+    padding-top: 18rem;
+    @include flex($flex-direction: column, $gap: 6rem);
+    @include tablet {
+        padding-top: 10.5rem;
+        gap: 5.2rem;
+    }
+    @include desktop {
+        padding-top: 14rem;
+        gap: 5.1rem;
+    }
     &__headings-wrapper {
         @include flex($flex-direction: column, $gap: 1.6rem);
-    }
-
-    @include tablet {
-        padding-top: 10rem;
     }
 }
 
 .slide {
     text-align: center;
-    @include flex($flex-direction: column, $gap: 6.4rem);
+    @include flex($flex-direction: column, $gap: 6rem);
+    @include tablet {
+        gap: 5.5rem;
+    }
+    @include desktop {
+        gap: 5.5rem;
+    }
     &__pic {
         height: 12.8rem;
         width: 12.8rem;
         border-radius: 100%;
     }
     &__content {
-        @include flex($flex-direction: column, $gap: 6.4rem);
+        @include flex($flex-direction: column, $gap: 6rem);
     }
     &__heading {
-        font-size: 2.8rem;
+        font-size: $font-size-lxl;
     }
     &__sub-heading {
-        font-size: 2.3rem;
+        font-size: $font-size-lg;
     }
     &__rating {
-        font-size: 3.2rem;
-        @include flex($gap: 1rem);
+        font-size: $font-size-lg;
+        @include flex($gap: 2rem);
     }
     &__heading-rating-wrapper {
-        @include flex($flex-direction: column, $gap: 3.2rem);
+        @include flex($flex-direction: column, $gap: 2.4rem);
     }
 }
 
@@ -46,7 +55,13 @@
     }
 
     &__pagination {
-        padding-top: 5rem;
+        padding-top: 8rem;
+        @include tablet {
+            padding-top: 12rem;
+        }
+        @include desktop {
+            padding-top: 10rem;
+        }
     }
 
     &__arrows {
