--- a/src/styles/layout/_travel.scss
+++ b/src/styles/layout/_travel.scss
@@ -57,6 +57,7 @@
                 -webkit-line-clamp: 3;
                 overflow: hidden;
                 line-clamp: 3;
+                font-weight: 700;
             }
             &__sub-heading {
                 font-size: $font-size-md;
