--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,16 +1,17 @@
 @use '../abstracts/' as *;
 
 .footer {
+    padding-bottom: 6.4rem;
     padding-top: 7rem;
 
     @include tablet {
-        @include flex(start, baseline, column, 6.4rem, nowrap);
+        @include flex(start, flex-start, column, 6.4rem, nowrap);
         padding-top: 7rem;
     }
 
     @include desktop {
         padding-top: 20rem;
-        @include flex(space-between, baseline, row, 6.4rem, nowrap);
+        @include flex(space-between, flex-start, row, 6.4rem, nowrap);
     }
     &__logo {
         font-size: $font-size-xl;
@@ -49,14 +50,14 @@
         @include flex(
             $flex-direction: column,
             $align-items: baseline,
-            $gap: 3.2rem
+            $gap: 3.5rem
         );
         @include desktop {
             max-width: 57rem;
         }
     }
     &__heading-wrapper {
-        @include flex($gap: 1.6rem);
+        @include flex($gap: 1.8rem);
         width: fit-content;
     }
     &__desc {
@@ -96,19 +97,23 @@
 
     &__tablet {
         width: 100%;
-        @include flex(space-between, baseline, row, 3.2rem, nowrap);
+        @include flex(start, flex-start, row, 3.2rem, nowrap);
         display: none;
         @include tablet {
             display: flex;
+            justify-content: space-between;
         }
         @include desktop {
             display: flex;
             width: fit-content;
+            gap: 6.4rem;
         }
     }
 
     &__column {
-        @include flex(start, left, column, 3.2rem, nowrap);
+        margin-top: 0;
+
+        @include flex(start, left, column, 2.8rem, nowrap);
 
         &-heading {
             font-size: $font-size-lg;
