--- a/src/styles/abstracts/variables/_colors.scss
+++ b/src/styles/abstracts/variables/_colors.scss
@@ -1,3 +1,4 @@
+//Colors
 $slate-blue: #5d50c6;
 $french-rose: #f85e9f;
 $outrageous-orange: #ff5722;
@@ -5,10 +6,14 @@ $kournikova-yellow: #facd49;
 $white: #ffffff;
 $black: #000000;
 $midnight-express-50: #19182580;
+$grey-100: #eeeeee;
+
+// Borders
+$grey-border: 1px solid $grey-100;
+
+// Shadow colors
 $shadow-color-1: #0000001a;
 $shadow-color-2: #00000017;
 $shadow-color-3: #0000000d;
 $shadow-color-4: #00000003;
 $shadow-color-5: #00000000;
-$grey-100: #eeeeee;
-$grey-border: 1px solid $grey-100;
