--- a/src/styles/abstracts/mixins/_flex.scss
+++ b/src/styles/abstracts/mixins/_flex.scss
@@ -4,7 +4,7 @@
     $align-items - align-items property of flex containers (default : center)
     $flex-direction- flex-direction property of flex containers (default : row)
     $gap - gap property of flex containers (default : 0)
-    $flex-wrap - flex wrap property of flex containers (default : wrap)
+    $flex-wrap - flex wrap property of flex containers (default : nowrap)
 */
 
 @mixin flex(
@@ -12,7 +12,7 @@
     $align-items: center,
     $flex-direction: row,
     $gap: 0,
-    $flex-wrap: wrap
+    $flex-wrap: nowrap
 ) {
     display: flex;
     justify-content: $justify-content;
