--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -22,20 +22,19 @@
         width: 100%;
         flex-basis: 100%;
         align-self: stretch;
+        min-height: 27.9rem;
 
         @include tablet {
-            width: fit-content;
             padding: 6.4rem;
             gap: 6.4rem;
             max-width: 28.8rem;
             max-height: 44.3rem;
         }
         @include desktop {
-            width: fit-content;
             padding: 6.4rem;
             gap: 6.4rem;
-            max-width: 38.6rem;
-            max-height: 44.3rem;
+            min-width: 38.6rem;
+            min-height: 44.3rem;
         }
     }
 }
