--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -21,7 +21,7 @@
 
     &__logo {
         @include flex();
-        font-size: $font-size-xl;
+        font-size: $font-size-3xl;
 
         @include tablet {
             order: 2;
@@ -38,7 +38,7 @@
     &__hamburger {
         z-index: map-get($map: $z-index, $key: hamburger);
         @include flex();
-        font-size: $font-size-xl;
+        font-size: $font-size-3xl;
 
         @include tablet {
             order: 1;
